# pilot-hdc-e2e-tests

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: cscs-development-tests.yaml  cscs-production-tests.yaml  development-tests.yaml  ovh-development-tests.yaml  ovh-production-tests.yaml  production-tests.yaml  tests.yaml
tests/: conftest.py  test_announcement.py  test_canvas.py  test_dataset.py  test_file_explorer.py  test_pilotcli.py  test_search.py
tests/fixtures/: context.py  dataset_explorer.py  debug.py  fake.py  file_explorer.py  pilotcli.py
